@@ -8,7 +8,7 @@ Description: Importing QIIME2 artifacts and associated data into R sessions.
 License: MIT
 Encoding: UTF-8
 LazyData: true
-RoxygenNote: 7.1.1
+RoxygenNote: 7.3.1
 Suggests: knitr, rmarkdown
 VignetteBuilder: knitr
 biocViews: Microbiome, DataImport
